--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "install-client": "cd client && npm install", 
   "heroku-postbuild": "npm run install-client && npm run build", 
   "start": "node server.js", 
-  "client": "cd client && npm start", 
+  "client": "cd client && npm start && npm run build", 
   "dev": "concurrently -n 'server,client' -c 'red,green' \"nodemon server.js\" \"npm run client\"" 
   }, 
   "keywords": [],
